# patient-insight

./: .env.example  DEPLOYMENT.md  DEPLOYMENT_AWS.md  Dockerfile  Taskfile.yml  app.py  insight_extractor.py  main.py  pyproject.toml  requirements.txt  secrets_manager.py  test_mock.py
.github/workflows/: README.md  ci-cd.yml  terraform.yml
.streamlit/: config.toml
terraform/: README.md  bootstrap.sh  main.tf  outputs.tf  variables.tf
