[project]
name = "patientoverview"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic",
    "openai",
    "python-dotenv",
    "langchain",
    "langchain-openai",
    "langchain-mistralai",
    "langchain-community",
    "streamlit>=1.53.1",
    "pandas>=2.3.3",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]
